--- a/demo/src/frontend/package.json
+++ b/demo/src/frontend/package.json
@@ -21,9 +21,11 @@
     "ant-design-vue": "^3.2.12",
     "axios": "^0.27.2",
     "dayjs": "^1.11.5",
+    "echarts": "^5.3.3",
     "pinia": "^2.0.22",
     "pinia-plugin-persist": "^1.0.0",
     "vue": "^3.2.39",
+    "vue-echarts": "^6.2.3",
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.1.5",
     "vxe-table": "^4.3.5",
