--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.7.5</version>
+		<version>3.0.0</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>org.nutz</groupId>
@@ -13,7 +13,7 @@
 	<description>Demo project for Spring Boot with nutz</description>
 
 	<properties>
-		<java.version>1.8</java.version>
+		<java.version>17</java.version>
 		<nutz.version>[1.r.68.v20200309,)</nutz.version>
 	</properties>
 	<repositories>
@@ -24,6 +24,8 @@
 	</repositories>
 
 	<dependencies>
+
+		<!-- web中间件及日志 -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
@@ -52,73 +54,58 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-		<dependency>
-			<groupId>org.webjars</groupId>
-			<artifactId>webjars-locator-core</artifactId>
-			<version>0.52</version>
-		</dependency>
 
+		<!--数据库相关 -->
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-
 		<dependency>
 			<groupId>com.ibeetl</groupId>
 			<artifactId>beetl</artifactId>
-			<version>3.10.0.RELEASE</version>
-		</dependency>
-		<dependency>
-			<groupId>com.alibaba</groupId>
-			<artifactId>druid-spring-boot-starter</artifactId>
-			<version>1.2.12</version>
+			<version>3.13.0.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.nutz</groupId>
 			<artifactId>nutz-spring-boot-starter</artifactId>
-			<version>2.7.5</version>
+			<version>3.0.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>druid-spring-boot-starter</artifactId>
+			<version>1.2.15</version>
+		</dependency>
+
+		<!-- club.zhcs 全家桶 -->
 		<dependency>
 			<groupId>club.zhcs</groupId>
 			<artifactId>tiny</artifactId>
-			<version>2.7.5</version>
+			<version>3.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>club.zhcs</groupId>
+			<artifactId>open-api-spring-boot-starter</artifactId>
+			<version>3.0.0</version>
 		</dependency>
 
 		<!-- 微信 -->
 		<dependency>
 			<groupId>com.github.binarywang</groupId>
 			<artifactId>wx-java-mp-spring-boot-starter</artifactId>
-			<version>4.3.1.B</version>
+			<version>4.4.5.B</version>
 		</dependency>
 		<dependency>
 			<groupId>com.github.binarywang</groupId>
 			<artifactId>wx-java-miniapp-spring-boot-starter</artifactId>
-			<version>4.3.1.B</version>
+			<version>4.4.5.B</version>
 		</dependency>
 
-		<dependency>
-			<groupId>org.nutz</groupId>
-			<artifactId>nutz-plugins-ngrok</artifactId>
-			<version>1.r.68.v20201205</version>
-			<exclusions>
-				<exclusion>
-					<groupId>org.slf4j</groupId>
-					<artifactId>slf4j-log4j12</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-		<dependency>
-			<groupId>club.zhcs</groupId>
-			<artifactId>open-api-spring-boot-starter</artifactId>
-			<version>2.7.5</version>
-		</dependency>
-
+		<!-- jwt和鉴权-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt -->
 		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
 			<artifactId>jjwt</artifactId>
@@ -130,6 +117,8 @@
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
 		</dependency>
+		
+		<!-- 代码生成-->
 		<dependency>
 			<groupId>com.baomidou</groupId>
 			<artifactId>mybatis-plus-generator</artifactId>
@@ -143,6 +132,13 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>org.apache.maven</groupId>
+			<artifactId>maven-model</artifactId>
+			<version>3.8.5</version>
+			<scope>test</scope>
+		</dependency>
+		
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
@@ -152,12 +148,6 @@
 					<artifactId>junit-vintage-engine</artifactId>
 				</exclusion>
 			</exclusions>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.maven</groupId>
-			<artifactId>maven-model</artifactId>
-			<version>3.8.5</version>
-			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
