--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.7.6</version>
+		<version>2.7.11</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>org.nutz</groupId>
@@ -14,7 +14,7 @@
 
 	<properties>
 		<java.version>1.8</java.version>
-		<nutz.version>[1.r.68.v20200309,)</nutz.version>
+		<nutz.version>[1.r.69.v20220703,)</nutz.version>
 	</properties>
 	<repositories>
 		<repository>
@@ -54,25 +54,25 @@
 		</dependency>
 
 		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
+			<groupId>com.mysql</groupId>
+  <artifactId>mysql-connector-j</artifactId>
 			<scope>runtime</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>com.ibeetl</groupId>
 			<artifactId>beetl</artifactId>
-			<version>3.13.0.RELEASE</version>
+			<version>3.15.4.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>druid-spring-boot-starter</artifactId>
-			<version>1.2.15</version>
+			<version>1.2.16</version>
 		</dependency>
 		<dependency>
 			<groupId>org.nutz</groupId>
 			<artifactId>nutz-spring-boot-starter</artifactId>
-			<version>2.7.6</version>
+			<version>2.7.11</version>
 		</dependency>
 		<dependency>
 			<groupId>club.zhcs</groupId>
@@ -84,12 +84,12 @@
 		<dependency>
 			<groupId>com.github.binarywang</groupId>
 			<artifactId>wx-java-mp-spring-boot-starter</artifactId>
-			<version>4.3.1.B</version>
+			<version>4.5.0</version>
 		</dependency>
 		<dependency>
 			<groupId>com.github.binarywang</groupId>
 			<artifactId>wx-java-miniapp-spring-boot-starter</artifactId>
-			<version>4.3.1.B</version>
+			<version>4.5.0</version>
 		</dependency>
 
 		<dependency>
@@ -106,7 +106,7 @@
 		<dependency>
 			<groupId>club.zhcs</groupId>
 			<artifactId>open-api-spring-boot-starter</artifactId>
-			<version>2.7.6</version>
+			<version>2.7.11</version>
 		</dependency>
 
 		<dependency>
@@ -128,13 +128,13 @@
 		<dependency>
 			<groupId>com.baomidou</groupId>
 			<artifactId>mybatis-plus-generator</artifactId>
-			<version>3.5.3</version>
+			<version>3.5.3.1</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.baomidou</groupId>
 			<artifactId>mybatis-plus-boot-starter</artifactId>
-			<version>3.5.2</version>
+			<version>3.5.3.1</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
