--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-parent</artifactId>
-		<version>2.7.10</version>
+		<version>2.7.11</version>
 	</parent>
 	<groupId>org.nutz</groupId>
 	<artifactId>nutz-spring-boot-starter</artifactId>
@@ -41,6 +41,7 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
 		<nutz.version>1.r.69.v20220703</nutz.version>
+		<beetl.version>3.15.4.RELEASE</beetl.version>
 	</properties>
 	<repositories>
 		<repository>
@@ -95,7 +96,7 @@
 		<dependency>
 			<groupId>com.ibeetl</groupId>
 			<artifactId>beetl</artifactId>
-			<version>3.15.0.RELEASE</version>
+			<version>${beetl.version}</version>
 			<optional>true</optional>
 			<scope>provided</scope>
 		</dependency>
